apk installation feature

--- a/AppInCloud/appsettings.json
+++ b/AppInCloud/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Kestrel":{
+    "Limits":{
+          
+    }
+  },
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db;Cache=Shared"
   },
@@ -16,5 +21,10 @@
       }
     }
   },
-"AllowedHosts": "*"
+"AllowedHosts": "*",
+"Emulator": {
+  "BasePath": "/home/ubuntu/android-cuttlefish/cf",
+  "AdbPath": "./bin/adb",
+  "CvdPath": "./bin/launch_cvd"
+} 
 }
