--- a/AppInCloud/ClientApp/package.json
+++ b/AppInCloud/ClientApp/package.json
@@ -30,6 +30,7 @@
     "workbox-streams": "^6.5.3"
   },
   "devDependencies": {
+    "npm-watch": "^0.11.0",
     "ajv": "^8.11.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.18.0",
@@ -49,13 +50,14 @@
     "nth-check": "^3.0.1"
   },
   "scripts": {
+    "watch": "npm-watch",
     "prestart": "node aspnetcore-https && node aspnetcore-react",
     "start": "rimraf ./build && react-scripts start",
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/"
-  },
+    },
   "eslintConfig": {
     "extends": [
       "react-app"
@@ -72,5 +74,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "watch": {
+    "build": {
+      "patterns": [
+        "src"
+      ],
+      "extensions": "js,jsx"
+    }
   }
 }
