wip: set up reverse proxy to cuttlefish

--- a/AppInCloud/appsettings.Development.json
+++ b/AppInCloud/appsettings.Development.json
@@ -11,5 +11,17 @@
     "Key": {
       "Type": "Development"
     }
+  },
+
+  "ReverseProxy": {
+
+    "Clusters": {
+      "cuttlefish": {     
+        "HttpClient" : {
+          "DangerousAcceptAnyServerCertificate": true
+        }
+      }
+    }
   }
+
 }
