--- a/AppInCloud/appsettings.json
+++ b/AppInCloud/appsettings.json
@@ -21,10 +21,46 @@
       }
     }
   },
-"AllowedHosts": "*",
-"Emulator": {
-  "BasePath": "/home/ubuntu/android-cuttlefish/cf",
-  "AdbPath": "./bin/adb",
-  "CvdPath": "./bin/launch_cvd"
-} 
+  "AllowedHosts": "*",
+  "Emulator": {
+    "BasePath": "/home/ubuntu/android-cuttlefish/cf",
+    "AdbPath": "./bin/adb",
+    "CvdPath": "./bin/launch_cvd"
+  },
+
+  "ReverseProxy": {
+    "Routes": {
+      "devices" : {
+        "ClusterId": "cuttlefish",
+        "AuthorizationPolicy": "authorized",
+        "Match": {
+          "Path": "/devices/{*any}"
+        }
+      },
+      
+      "infra_config" : {
+        "ClusterId": "cuttlefish",
+        "AuthorizationPolicy": "authorized",
+        "Match": {
+          "Path": "/infra_config"
+        }
+      },
+      "polled_connections" : {
+        "ClusterId": "cuttlefish",
+        "AuthorizationPolicy": "authorized",
+        "Match": {
+          "Path": "/polled_connections/{*any}"
+        }
+      }
+    },
+    "Clusters": {
+      "cuttlefish": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://localhost:8532"
+          }
+        }
+      }
+    }
+  }
 }
