wip: background jobs, deletion, UI

--- a/AppInCloud/appsettings.json
+++ b/AppInCloud/appsettings.json
@@ -5,13 +5,16 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "DataSource=app.db;Cache=Shared",
+    "HangfireConnection": "DataSource=app.db;Cache=Shared"
   },
   "Logging": {
       "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Hangfire": "Information"
+
       }
     },
   "IdentityServer": {
