--- a/AppInCloud/ClientApp/package.json
+++ b/AppInCloud/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.10.4",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
     "merge": "^2.1.1",
@@ -30,7 +31,6 @@
     "workbox-streams": "^6.5.3"
   },
   "devDependencies": {
-    "npm-watch": "^0.11.0",
     "ajv": "^8.11.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.18.0",
@@ -40,6 +40,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "nan": "^2.16.0",
+    "npm-watch": "^0.11.0",
     "typescript": "^4.7.4"
   },
   "overrides": {
@@ -57,7 +58,7 @@
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/"
-    },
+  },
   "eslintConfig": {
     "extends": [
       "react-app"
