Add basic device management

--- a/AppInCloud/appsettings.json
+++ b/AppInCloud/appsettings.json
@@ -27,8 +27,7 @@
   "AllowedHosts": "*",
   "Emulator": {
     "BasePath": "/home/ubuntu/android-cuttlefish/cf",
-    "AdbPath": "./bin/adb",
-    "CvdPath": "./bin/launch_cvd"
+    "AdbPath": "./bin/adb"
   },
 
   "ReverseProxy": {
