Add additional role information to authorization endpoints, hide admin panel on frontend from non-admin user. Create admin user on startup.

--- a/AppInCloud/appsettings.json
+++ b/AppInCloud/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppInCloud": {
+    "DefaultAdminEmail": "Admin0@appincloudtest.net",
+    "DefaultAdminPassword": "Admin0@appincloudtest.net"
+  },
   "Kestrel":{
     "Limits":{
           
