--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,11 +20,12 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
-    - name: Enter directory
-      run: cd AppInCloud
     - name: Restore dependencies
+      working-directory: ./AppInCloud
       run: dotnet restore
     - name: Build
+      working-directory: ./AppInCloud
       run: dotnet build --no-restore
     - name: Test
+      working-directory: ./AppInCloud
       run: dotnet test --no-build --verbosity normal
