Refactor ADB, Cuttlefish services. Configure jobs, move cuttlefish-related jobs to separate one-worker job. Show running jobs in admin UI. Allow running commands through ssh.

--- a/AppInCloud/appsettings.json
+++ b/AppInCloud/appsettings.json
@@ -1,7 +1,14 @@
 {
   "AppInCloud": {
     "DefaultAdminEmail": "Admin0@appincloudtest.net",
-    "DefaultAdminPassword": "Admin0@appincloudtest.net"
+    "DefaultAdminPassword": "",
+
+    "RPC": {
+      "Host": "",
+      "User": "",
+      "KeyPath": "",
+      "Password": ""
+    }
   },
   "Kestrel":{
     "Limits":{
