Implement device add, delete, reset action and support for 12 android

--- a/AppInCloud/appsettings.json
+++ b/AppInCloud/appsettings.json
@@ -38,6 +38,7 @@
   "AllowedHosts": "*",
   "Emulator": {
     "BasePath": "/home/ubuntu/android-cuttlefish/cf",
+    "LegacyBasePath": "/home/ubuntu/cuttlefish12/cf",
     "AdbPath": "./bin/adb"
   },
 
