Configure project to use postgres database. Fixes.

--- a/AppInCloud/appsettings.Development.json
+++ b/AppInCloud/appsettings.Development.json
@@ -12,7 +12,10 @@
       "Type": "Development"
     }
   },
-
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Username=dotnet;Password=dotnet;Database=appincloud",
+    "HangfireConnection": "Host=localhost;Username=dotnet;Password=dotnet;Database=appincloud"
+  },
   "ReverseProxy": {
 
     "Clusters": {
