--- a/AppInCloud/appsettings.json
+++ b/AppInCloud/appsettings.json
@@ -16,8 +16,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared",
-    "HangfireConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "",
+    "HangfireConnection": ""
   },
   "Logging": {
       "LogLevel": {
