Add usage limits feature. Fix settings.

--- a/AppInCloud/appsettings.json
+++ b/AppInCloud/appsettings.json
@@ -1,8 +1,9 @@
 {
+  "EnableRegistration": true,
+  "AutoTurnOff": 0,
   "AppInCloud": {
     "DefaultAdminEmail": "Admin0@appincloudtest.net",
     "DefaultAdminPassword": "",
-
     "RPC": {
       "Host": "",
       "User": "",
@@ -10,24 +11,21 @@
       "Password": ""
     }
   },
-  "Kestrel":{
-    "Limits":{
-          
-    }
+  "Kestrel": {
+    "Limits": {}
   },
   "ConnectionStrings": {
     "DefaultConnection": "",
     "HangfireConnection": ""
   },
   "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information",
-        "Hangfire": "Information"
-
-      }
-    },
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Hangfire": "Information"
+    }
+  },
   "IdentityServer": {
     "Clients": {
       "AppInCloud": {
@@ -41,25 +39,23 @@
     "LegacyBasePath": "/home/ubuntu/cuttlefish12/cf",
     "AdbPath": "./bin/adb"
   },
-
   "ReverseProxy": {
     "Routes": {
-      "devices" : {
+      "devices": {
         "ClusterId": "cuttlefish",
         "AuthorizationPolicy": "authorized",
         "Match": {
           "Path": "/devices/{*any}"
         }
       },
-      
-      "infra_config" : {
+      "infra_config": {
         "ClusterId": "cuttlefish",
         "AuthorizationPolicy": "authorized",
         "Match": {
           "Path": "/infra_config"
         }
       },
-      "polled_connections" : {
+      "polled_connections": {
         "ClusterId": "cuttlefish",
         "AuthorizationPolicy": "authorized",
         "Match": {
