--- a/AppInCloud/appsettings.json
+++ b/AppInCloud/appsettings.json
@@ -21,7 +21,6 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
       "Hangfire": "Information"
     }
@@ -47,6 +46,27 @@
         "Match": {
           "Path": "/devices/{*any}"
         }
+      },"list_devices": {
+        "ClusterId": "cuttlefish_v12",
+        "AuthorizationPolicy": "authorized",
+        "Match": {
+          "Path": "/list_devices"
+        }
+      },"connect_client": {
+        "ClusterId": "cuttlefish_v12",
+        "AuthorizationPolicy": "authorized",
+        "Match": {
+          "Path": "/connect_client"
+        }
+      },
+      "devices_cvd1": {
+        "ClusterId": "cuttlefish_v12",
+        "AuthorizationPolicy": "authorized",
+        "Match": {
+          "Path": "/devices/cvd-1/{*any}"
+          
+        },
+        "Transforms": [{"PathRemovePrefix" : "/devices/cvd-1"}]
       },
       "infra_config": {
         "ClusterId": "cuttlefish",
@@ -64,11 +84,22 @@
       }
     },
     "Clusters": {
-      "cuttlefish": {
+      "cuttlefish_v13": {
         "Destinations": {
           "destination1": {
             "Address": "https://localhost:8532"
           }
+        }
+      },
+      "cuttlefish_v12": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://localhost:8443"
+          }
+        },
+        "HttpRequest": {
+          "Version": "1.1",
+          "VersionPolicy": "RequestVersionExact"
         }
       }
     }
