--- a/AppInCloud/appsettings.Development.json
+++ b/AppInCloud/appsettings.Development.json
@@ -2,7 +2,6 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
       "Microsoft.AspNetCore.SpaProxy": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
@@ -19,7 +18,12 @@
   "ReverseProxy": {
 
     "Clusters": {
-      "cuttlefish": {     
+      "cuttlefish_v13": {     
+        "HttpClient" : {
+          "DangerousAcceptAnyServerCertificate": true
+        }
+      },
+      "cuttlefish_v12": {     
         "HttpClient" : {
           "DangerousAcceptAnyServerCertificate": true
         }
