Proxying websockets to multiple cvd

--- a/AppInCloud/appsettings.Development.json
+++ b/AppInCloud/appsettings.Development.json
@@ -23,7 +23,12 @@
           "DangerousAcceptAnyServerCertificate": true
         }
       },
-      "cuttlefish_v12": {     
+      "cuttlefish_cvd1": {     
+        "HttpClient" : {
+          "DangerousAcceptAnyServerCertificate": true
+        }
+      },
+      "cuttlefish_cvd2": {     
         "HttpClient" : {
           "DangerousAcceptAnyServerCertificate": true
         }
