--- a/AppInCloud/appsettings.json
+++ b/AppInCloud/appsettings.json
@@ -46,21 +46,28 @@
         "Match": {
           "Path": "/devices/{*any}"
         }
-      },"list_devices": {
-        "ClusterId": "cuttlefish_v12",
+      },
+      
+      
+      "list_devices_cvd1": {
+        "ClusterId": "cuttlefish_cvd1",
         "AuthorizationPolicy": "authorized",
         "Match": {
-          "Path": "/list_devices"
-        }
-      },"connect_client": {
-        "ClusterId": "cuttlefish_v12",
+          "Path": "/list_devices/cvd-1"
+        },
+        "Transforms": [{"PathSet" : "/list_devices"}]
+      },
+      
+      "connect_client_cvd1": {
+        "ClusterId": "cuttlefish_cvd1",
         "AuthorizationPolicy": "authorized",
         "Match": {
-          "Path": "/connect_client"
-        }
+          "Path": "/connect_client/cvd-1"
+        },
+        "Transforms": [{"PathSet" : "/connect_client"}]
       },
       "devices_cvd1": {
-        "ClusterId": "cuttlefish_v12",
+        "ClusterId": "cuttlefish_cvd1",
         "AuthorizationPolicy": "authorized",
         "Match": {
           "Path": "/devices/cvd-1/{*any}"
@@ -68,6 +75,36 @@
         },
         "Transforms": [{"PathRemovePrefix" : "/devices/cvd-1"}]
       },
+
+
+      "list_devices_cvd2": {
+        "ClusterId": "cuttlefish_cvd2",
+        "AuthorizationPolicy": "authorized",
+        "Match": {
+          "Path": "/list_devices/cvd-2"
+        },
+        "Transforms": [{"PathSet" : "/list_devices"}]
+      },
+
+      "connect_client_cvd2": {
+        "ClusterId": "cuttlefish_cvd2",
+        "AuthorizationPolicy": "authorized",
+        "Match": {
+          "Path": "/connect_client/cvd-2"
+        },
+        "Transforms": [{"PathSet" : "/connect_client"}]
+      },
+      "devices_cvd2": {
+        "ClusterId": "cuttlefish_cvd2",
+        "AuthorizationPolicy": "authorized",
+        "Match": {
+          "Path": "/devices/cvd-2/{*any}"
+          
+        },
+        "Transforms": [{"PathRemovePrefix" : "/devices/cvd-2"}]
+      },
+
+
       "infra_config": {
         "ClusterId": "cuttlefish",
         "AuthorizationPolicy": "authorized",
@@ -91,10 +128,21 @@
           }
         }
       },
-      "cuttlefish_v12": {
+      "cuttlefish_cvd1": {
         "Destinations": {
           "destination1": {
             "Address": "https://localhost:8443"
+          }
+        },
+        "HttpRequest": {
+          "Version": "1.1",
+          "VersionPolicy": "RequestVersionExact"
+        }
+      },
+      "cuttlefish_cvd2": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://localhost:8444"
           }
         },
         "HttpRequest": {
