Fix access check in devices

--- a/AppInCloud/appsettings.json
+++ b/AppInCloud/appsettings.json
@@ -47,64 +47,78 @@
           "Path": "/devices/{*any}"
         }
       },
-      
-      
       "list_devices_cvd1": {
         "ClusterId": "cuttlefish_cvd1",
         "AuthorizationPolicy": "authorized",
         "Match": {
           "Path": "/list_devices/cvd-1"
         },
-        "Transforms": [{"PathSet" : "/list_devices"}]
+        "Transforms": [
+          {
+            "PathSet": "/list_devices"
+          }
+        ]
       },
-      
       "connect_client_cvd1": {
         "ClusterId": "cuttlefish_cvd1",
         "AuthorizationPolicy": "authorized",
         "Match": {
           "Path": "/connect_client/cvd-1"
         },
-        "Transforms": [{"PathSet" : "/connect_client"}]
+        "Transforms": [
+          {
+            "PathSet": "/connect_client"
+          }
+        ]
       },
       "devices_cvd1": {
         "ClusterId": "cuttlefish_cvd1",
         "AuthorizationPolicy": "authorized",
         "Match": {
           "Path": "/devices/cvd-1/{*any}"
-          
         },
-        "Transforms": [{"PathRemovePrefix" : "/devices/cvd-1"}]
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/devices/cvd-1"
+          }
+        ]
       },
-
-
       "list_devices_cvd2": {
         "ClusterId": "cuttlefish_cvd2",
         "AuthorizationPolicy": "authorized",
         "Match": {
           "Path": "/list_devices/cvd-2"
         },
-        "Transforms": [{"PathSet" : "/list_devices"}]
+        "Transforms": [
+          {
+            "PathSet": "/list_devices"
+          }
+        ]
       },
-
       "connect_client_cvd2": {
         "ClusterId": "cuttlefish_cvd2",
         "AuthorizationPolicy": "authorized",
         "Match": {
           "Path": "/connect_client/cvd-2"
         },
-        "Transforms": [{"PathSet" : "/connect_client"}]
+        "Transforms": [
+          {
+            "PathSet": "/connect_client"
+          }
+        ]
       },
       "devices_cvd2": {
         "ClusterId": "cuttlefish_cvd2",
         "AuthorizationPolicy": "authorized",
         "Match": {
           "Path": "/devices/cvd-2/{*any}"
-          
         },
-        "Transforms": [{"PathRemovePrefix" : "/devices/cvd-2"}]
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/devices/cvd-2"
+          }
+        ]
       },
-
-
       "infra_config": {
         "ClusterId": "cuttlefish",
         "AuthorizationPolicy": "authorized",
