--- a/AppInCloud/appsettings.json
+++ b/AppInCloud/appsettings.json
@@ -41,7 +41,7 @@
   "ReverseProxy": {
     "Routes": {
       "devices": {
-        "ClusterId": "cuttlefish",
+        "ClusterId": "cuttlefish_v13",
         "AuthorizationPolicy": "authorized",
         "Match": {
           "Path": "/devices/{*any}"
@@ -120,14 +120,14 @@
         ]
       },
       "infra_config": {
-        "ClusterId": "cuttlefish",
+        "ClusterId": "cuttlefish_v13",
         "AuthorizationPolicy": "authorized",
         "Match": {
           "Path": "/infra_config"
         }
       },
       "polled_connections": {
-        "ClusterId": "cuttlefish",
+        "ClusterId": "cuttlefish_v13",
         "AuthorizationPolicy": "authorized",
         "Match": {
           "Path": "/polled_connections/{*any}"
@@ -138,7 +138,7 @@
       "cuttlefish_v13": {
         "Destinations": {
           "destination1": {
-            "Address": "https://localhost:8532"
+            "Address": "https://localhost:8533"
           }
         }
       },
